Bug 506078 - Flat review modifier keys in Orca cause character insertion in KDE Plasma
Summary: Flat review modifier keys in Orca cause character insertion in KDE Plasma
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: 6.4.0
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: accessibility
Depends on:
Blocks:
 
Reported: 2025-06-23 22:22 UTC by Aaron Hewitt
Modified: 2025-07-03 12:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aaron Hewitt 2025-06-23 22:22:22 UTC
STEPS TO REPRODUCE
1. Open System Settings -> Accessibility -> Screen Reader.
2. Enable the Screen Reader checkbox to start Orca.
3. Click the "Launch Screen Reader Configuration" button to open Orca’s preferences.
4. In the General tab, set Keyboard Layout to Laptop (this makes Caps Lock the Orca modifier key).
5. Focus a text field or any application that accepts keyboard input.
6. Use flat review commands, such as Caps Lock + U or Caps Lock + O.

OBSERVED RESULT

The flat review navigation sometimes occurs as expected, but the corresponding character (e.g., "u", "o") is also typed into the focused field. This happens with multiple flat review keys when using Caps Lock as the Orca modifier.

EXPECTED RESULT

Only the flat review command should be triggered. Characters associated with the pressed key should not be inserted into the application or text field.

SOFTWARE/OS VERSIONS
Windows: n/a
macOS: n/a
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: Fedora Rawhide, Plasma 6.4
KDE Plasma Version: 6.4
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION

- Issue occurs only when Orca is set to Laptop layout (Caps Lock as modifier).
- This bug makes it difficult or dangerous to use flat review in fields like password inputs or terminals.
- This does not occur under GNOME with identical Orca configuration.
- Orca version: 48.1  
- Session type: Wayland
Comment 1 Bug Janitor Service 2025-06-27 21:43:42 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/7842
Comment 2 Nicolas Fella 2025-06-30 08:13:44 UTC
Git commit cfc05b0e788b225dbb0c3291c4a16d0beb9bb573 by Nicolas Fella.
Committed on 29/06/2025 at 16:34.
Pushed by nicolasfella into branch 'master'.

a11ykeyboardmanager: Grab keys when grabbed modifier is pressed

The description for 'modifiers' in SetKeyGrabs says "All keys in this list
will be grabbed, and keys pressed while any of these keys are down will also be grabbed."

That last part was missing, causing keys to be processed normally and sent to the application
when they shouldn't.

M  +15   -0    src/a11ykeyboardmonitor.cpp
M  +1    -0    src/a11ykeyboardmonitor.h

https://invent.kde.org/plasma/kwin/-/commit/cfc05b0e788b225dbb0c3291c4a16d0beb9bb573
Comment 3 Nicolas Fella 2025-06-30 09:57:13 UTC
Git commit b9ddda29dff6da3c20e60a288ef36fa62db621b8 by Nicolas Fella.
Committed on 30/06/2025 at 08:14.
Pushed by nicolasfella into branch 'Plasma/6.4'.

a11ykeyboardmanager: Grab keys when grabbed modifier is pressed

The description for 'modifiers' in SetKeyGrabs says "All keys in this list
will be grabbed, and keys pressed while any of these keys are down will also be grabbed."

That last part was missing, causing keys to be processed normally and sent to the application
when they shouldn't.


(cherry picked from commit cfc05b0e788b225dbb0c3291c4a16d0beb9bb573)

Co-authored-by: Nicolas Fella <nicolas.fella@gmx.de>

M  +15   -0    src/a11ykeyboardmonitor.cpp
M  +1    -0    src/a11ykeyboardmonitor.h

https://invent.kde.org/plasma/kwin/-/commit/b9ddda29dff6da3c20e60a288ef36fa62db621b8