a11ykeyboardmanager: Grab keys when grabbed modifier is pressed

The description for 'modifiers' in SetKeyGrabs says "All keys in this list
will be grabbed, and keys pressed while any of these keys are down will also be grabbed."

That last part was missing, causing keys to be processed normally and sent to the application
when they shouldn't.

BUG: 506078